<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"

        />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />


    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notifications" />




    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_menu" />

</menu>