<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LC.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tribe_logo"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="24dp"
        android:orientation="vertical"
        >


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            app:strokeWidth="1dp"
            app:strokeColor="#DDDDDD"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_text_email_or_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:background="@drawable/edit_text_background_color"
                    android:inputType="textEmailAddress"
                    android:textSize="13sp"/>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:src="#F0F0F0"
                    android:layout_marginHorizontal="15dp"
                    />


                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:textSize="13sp"
                    android:background="@drawable/edit_text_background_color"
                    android:inputType="textPassword"/>

            </LinearLayout>





        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/forgot_your_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_your_password"
                android:textColor="@color/black"
                android:paddingHorizontal="5dp"
                android:gravity="right"
                android:paddingVertical="5dp"
                android:textSize="12sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="Log In"
            android:textSize="13sp"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"

            />






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="bottom"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_account"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <TextView
                android:id="@+id/text_view_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="13sp"

                />



        </LinearLayout>


    </LinearLayout>

</LinearLayout>